--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,10 @@ a {
 
 .main-navigation {
   display: flex;
-  /* flex-direction: row;
-  justify-content: space-between; */
+  flex-direction: row;
+  /* justify-content: space-between; */
 
-  width: 1146px;
+  /* width: 1146px; */
   /* height: 154px; */
   margin: 0;
   padding: 0;
@@ -86,21 +86,12 @@ a {
   display: flex;
   align-items: center;
 
-  margin-right: 320px;
+  margin-right: 351px;
   margin-bottom: 10px;
 
   font-size: 16px;
   font-weight: 700;
   line-height: 18px;
-}
-
-.navigation-item {
-  margin: 0;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
 
 .catalog:hover {
@@ -206,8 +197,14 @@ a {
 }
 
 .navigation-item {
-  padding-left: 18px;
-  padding-right: 18px;
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
 
   text-decoration: underline;
   text-decoration-color: rgba(255, 255, 255, 0.2);
@@ -240,6 +237,7 @@ a {
   width: 33px;
   height: 33px;
   margin: 0;
+  margin-right: 9px;
   padding: 0;
 
   border-radius: 50%;
@@ -317,6 +315,7 @@ a {
 .sign-in {
   position: relative;
   margin-left: 5px;
+  margin-right: 12px;
   padding-top: 9px;
   padding-bottom: 9px;
 
@@ -329,7 +328,7 @@ a {
 .sign-in > a {
   margin: 0;
   padding: 0;
-  padding-left: 21px;
+  padding-left: 23px;
 
   font-size: 14px;
   font-weight: 500;
@@ -484,8 +483,8 @@ a {
 /* Форма корзины */
 .basket {
   position: relative;
-  margin-left: 5px;
   padding-top: 9px;
+  padding-right: 20px;
   padding-bottom: 9px;
 
   text-decoration: none;
@@ -495,13 +494,16 @@ a {
 }
 
 .full-basket {
+  padding-right: 12px;
+  padding-left: 12px;
+
   background-color: #f7f6f3;
 }
 
 .basket .basket-link-empty {
   margin: 0;
   padding: 0;
-  padding-left: 21px;
+  padding-left: 25px;
 
   font-size: 14px;
   font-weight: 500;
@@ -520,7 +522,7 @@ a {
 .basket .basket-link-full {
   margin: 0;
   padding: 0;
-  padding-left: 21px;
+  padding-left: 24px;
 
   font-size: 14px;
   font-weight: 500;
@@ -657,13 +659,19 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+
+  margin-top: -5px;
 }
 
 .schedule {
   margin: 0;
+  margin-bottom: 2px;
   padding: 0;
 
+  font-size: 14px;
   font-weight: 700;
+  line-height: 16px;
+  color: #ffffff;
 }
 
 .header-tel {
@@ -681,7 +689,7 @@ a {
   position: relative;
 
   margin-bottom: 40px;
-  padding-top: 130px;
+  padding-top: 135px;
 
   text-align: center;
   color: #ffffff;
@@ -701,7 +709,7 @@ a {
 .slide-title {
   width: 700px;
   margin: 0 auto;
-  margin-bottom: 27px;
+  margin-bottom: 30px;
 
   font-size: 60px;
   line-height: 60px;
@@ -710,7 +718,7 @@ a {
 
 .slider-controls {
   position: absolute;
-  bottom: 0;
+  bottom: 19px;
   left: 0;
   z-index: 20;
 
@@ -830,8 +838,8 @@ a {
 .banner-title {
   margin: 0;
   padding: 0;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  padding-top: 17px;
+  padding-bottom: 15px;
 
   font-size: 35px;
   font-weight: 700;
@@ -844,7 +852,7 @@ a {
 
   width: 560px;
   height: 229px;
-  padding-left: 30px;
+  padding-left: 19px;
 
   border-radius: 10px;
 }
@@ -871,7 +879,7 @@ a {
 
   margin: 0;
   padding: 0;
-  padding-bottom: 40px;
+  padding-bottom: 48px;
 
   font-size: 18px;
   font-weight: 700;
@@ -884,10 +892,10 @@ a {
   width: 150px;
   /* height: 46px; */
   margin-right: 20px;
-  padding-top: 10px;
-  padding-right: 15px;
+  padding-top: 11px;
+  padding-right: 20px;
   padding-bottom: 10px;
-  padding-left: 15px;
+  padding-left: 20px;
 
   font-size: 18px;
   font-weight: 700;
@@ -899,6 +907,11 @@ a {
   background-color: #ffffff;
   background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   opacity: 0.99;
+}
+
+.banner-item:first-child .banner-button {
+  padding-right: 7px;
+  padding-left: 7px;
 }
 
 .banner-button:hover {
@@ -920,8 +933,9 @@ a {
   display: flex;
 
   margin: 0;
-  padding: 0;
   margin-bottom: 40px;
+  padding: 0;
+  padding-top: 5px;
 
   list-style: none;
 }
@@ -938,7 +952,7 @@ a {
 
 .hit-price {
   position: absolute;
-  top: -65px;
+  top: -70px;
 
   margin: 0;
   padding: 0;
@@ -977,12 +991,14 @@ a {
 }
 
 .icecream-image {
+  margin-bottom: 5px;
+
   border-radius: 50%;
 }
 
 .hit-icon {
   position: absolute;
-  top: -268px;
+  top: -279px;
 }
 
 .hit-item:hover .item-card,
@@ -1068,7 +1084,7 @@ a {
 }
 
 .seo-wrapper {
-  padding-left: 10px;
+  /* padding-left: 10px; */
 
   background-color: #f1e7d0;
   background-image: url("../img/wafer-bg.jpg");
@@ -1080,13 +1096,14 @@ a {
   margin: 0;
   padding: 0;
   padding-top: 24px;
-  padding-bottom: 24px;
-  padding-left: 18px;
+  padding-bottom: 20px;
+  padding-left: 20px;
 
   font-size: 24px;
   font-weight: 500;
   line-height: 30px;
   color: #323232;
+  font-kerning: none;
 }
 
 .seo-features-list {
@@ -1102,15 +1119,20 @@ a {
 .feature-item {
   position: relative;
 
-  width: 514px;
-  margin-right: 33px;
-  margin-bottom: 30px;
-  margin-left: 20px;
+  width: 539px;
+  margin-right: 25px;
+  margin-bottom: 22px;
+  margin-left: 17px;
+}
+
+.feature-item:nth-child(2n) {
+  margin: 0;
 }
 
 .seo-feature-icon {
   position: absolute;
-  top: -16px;
+  top: -12px;
+  left: 4px;
 }
 
 .feature-description {
@@ -1134,10 +1156,10 @@ a {
 }
 
 .blog-news {
-  width: 560px;
+  width: 555px;
   height: 220px;
-  margin-right: 30px;
-  padding-left: 25px;
+  margin-right: 26px;
+  padding-left: 20px;
 
   background-color: #ffffff;
   background-image: url("../img/strawberry-bg.png");
@@ -1146,6 +1168,9 @@ a {
 }
 
 .blog-title {
+  margin-top: 25px;
+  margin-bottom: 4px;
+
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
@@ -1168,7 +1193,8 @@ a {
 /* Раздел рассылки */
 .mailing {
   display: flex;
-  width: 560px;
+  width: 555px;
+  margin-right: 1px;
   padding-top: 5px;
   padding-right: 5px;
   padding-bottom: 5px;
@@ -1184,9 +1210,9 @@ a {
   width: 500px;
   /* height: 211px; */
   padding-top: 5px;
-  padding-right: 20px;
+  padding-right: 24px;
   padding-bottom: 5px;
-  padding-left: 20px;
+  padding-left: 24px;
 
   background-color: #f8f7f4;
 
@@ -1198,10 +1224,13 @@ a {
   flex-direction: row;
   justify-content: flex-start;
 
-  margin-top: 40px;
+  margin-top: 35px;
 }
 
 .mailing-text {
+  margin-top: 26px;
+  margin-bottom: 0px;
+
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -1222,9 +1251,9 @@ a {
 .mailing-button {
   height: 20px;
   padding-top: 11px;
-  padding-right: 20px;
+  padding-right: 14px;
   padding-bottom: 14px;
-  padding-left: 20px;
+  padding-left: 14px;
 
   font-size: 18px;
   font-weight: 700;
@@ -1254,6 +1283,10 @@ a {
   text-decoration-color: rgba(255, 255, 255, 0.2);
 }
 
+.breadcrumbs-item a {
+  color: #ffffff;
+}
+
 .breadcrumbs-item::after {
   content: "»";
   padding: 0 5px;
@@ -1265,6 +1298,8 @@ a {
 
 .breadcrumbs-item:last-child {
   text-decoration: none;
+
+  pointer-events: none;
 }
 
 .breadcrumbs-item:last-child::after {
@@ -1599,7 +1634,7 @@ a {
   padding-left: 35px;
   margin-bottom: 12px;
 
-  user-select: none;
+  /* user-select: none; */
   cursor: pointer;
 }
 
@@ -1621,9 +1656,12 @@ a {
   width: 16px;
   height: 16px;
 
-  opacity: 0.8;
+  /* opacity: 0.8; */
   border: 2px solid #ffffff;
   border-radius: 3px;
+
+  /* background-image: url("../img/checkbox-off-icon.svg");
+  background-repeat: no-repeat; */
 }
 
 .checkbox-container:hover input ~ .checkbox-mark {
@@ -1632,6 +1670,8 @@ a {
 
 .checkbox-container input:checked ~ .checkbox-mark {
   background-color: #849d8f;
+  /* background-image: url("../img/checkbox-on-icon.svg");
+  background-repeat: no-repeat; */
 }
 
 .checkbox-mark:after {
@@ -1809,7 +1849,7 @@ a {
 /* Раздел контактов */
 .contacts {
   height: 430px;
-  /* margin-bottom: 20px; */
+  margin-bottom: 20px;
 }
 
 .map {
@@ -1842,8 +1882,11 @@ a {
 
   width: 268px;
   min-height: 260px;
-  margin-top: 60px;
-  padding: 28px 17px;
+  margin-top: 65px;
+  padding-top: 28px;
+  padding-right: 8px;
+  padding-bottom: 17px;
+  padding-left: 17px;
 
   background-color: #ffffff;
   border-radius: 10px;
@@ -1859,7 +1902,7 @@ a {
 
   margin: 0;
   padding: 0;
-  padding-bottom: 12px;
+  padding-bottom: 2px;
 
   font-size: 14px;
   font-weight: 400;
@@ -1870,7 +1913,7 @@ a {
 .card-adress {
   margin: 0;
   padding: 0;
-  padding-bottom: 14px;
+  padding-bottom: 17px;
 
   font-size: 18px;
   font-weight: 700;
@@ -1880,8 +1923,8 @@ a {
 
 .card-teltext {
   margin: 0;
+  margin-bottom: 6px;
   padding: 0;
-  padding-bottom: 8px;
 
   font-size: 14px;
   font-weight: 400;
@@ -1892,7 +1935,6 @@ a {
 .card-tel {
   margin: 0;
   padding: 0;
-  padding-bottom: 6px;
 
   font-size: 18px;
   font-weight: 700;
@@ -1902,8 +1944,8 @@ a {
 
 .card-schedule {
   margin: 0;
+  margin-bottom: 25px;
   padding: 0;
-  padding-bottom: 20px;
 
   font-size: 14px;
   font-weight: 400;
@@ -1931,11 +1973,11 @@ a {
 /*  */
 /* Раздел футера */
 .main-footer {
-  margin-bottom: 25px;
+  margin-bottom: 40px;
 }
 
 .main-footer .container-spacebetween {
-  align-items: flex-end;
+  align-items: center;
 }
 
 /* Раздел социальных сетей */
@@ -1944,6 +1986,8 @@ a {
   align-items: center;
 
   margin: 0;
+  margin-top: 10px;
+  margin-right: 38px;
   padding: 0;
 
   list-style: none;
@@ -1982,14 +2026,13 @@ a {
   width: 350px;
   height: 36px;
   margin: 0;
+  margin-top: 5px;
   padding: 0;
 
   list-style: none
 }
 
 .menu-item:first-child {
-  margin-right: 15px;
-
   font-size: 13px;
   font-weight: 700;
   line-height: 18px;
@@ -2006,7 +2049,7 @@ a {
 
 .menu-item {
   margin: 0;
-  margin-right: 20px;
+  margin-right: 34px;
   margin-bottom: 3px;
   padding: 0;
 
@@ -2017,6 +2060,10 @@ a {
 
   text-decoration: underline;
   text-decoration-color: rgba(255, 255, 255, 0.2);
+}
+
+.menu-item:nth-child(3) {
+ margin-right: 46px;
 }
 
 /* Раздел мейдин */
