--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ a {
 
   width: 153px;
   height: 0;
-  margin-top: 5px;
+  margin-top: 10px;
 
   -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
 
@@ -226,20 +226,44 @@ a {
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-left: 14px;
+  padding-right: 14px;
 
   text-decoration: underline;
   -webkit-text-decoration-color: rgba(255, 255, 255, 0.2);
           text-decoration-color: rgba(255, 255, 255, 0.2);
 }
 
+.site-navigation .navigation-item:hover {
+  padding-right: 14px;
+  padding-left: 14px;
+  padding-bottom: 9px;
+  padding-top: 9px;
+
+  text-decoration: none;
+
+  background-color: #f7f6f3;;
+  border-radius: 25px;
+}
+
+.site-navigation .navigation-item:focus,
+.site-navigation .navigation-item:active  {
+  -webkit-box-shadow: inset 0 2px 1px #696969;
+          box-shadow: inset 0 2px 1px #696969;
+  background-color: #ededed;
+  background-color: #f8f7f4;
+}
+
+.navigation-item:hover > a {
+  color: #000000;
+}
+
 .navigation-item-current {
-  padding-right: 12px;
-  padding-bottom: 8px;
-  padding-top: 8px;
+  padding-right: 14px;
+  padding-bottom: 9px;
+  padding-top: 9px;
 
   text-decoration: none;
 
@@ -359,6 +383,14 @@ a {
   border-radius: 5px;
 }
 
+.search .input-default:hover {
+  border: 2px solid rgba(154, 154, 154, 0.52);
+}
+
+.search .input-default:focus {
+  border: 2px solid rgba(46, 136, 228, 0.52);
+}
+
 /*  */
 
 /*  */
@@ -444,8 +476,9 @@ a {
 }
 
 .sign-form-email {
-  width: 226px;
-  height: 39px;
+  box-sizing: border-box;
+  width: 244px;
+  height: 46px;
   margin-top: 20px;
   margin-left: 20px;
   padding-top: 5px;
@@ -456,9 +489,18 @@ a {
   border-radius: 5px;
 }
 
+.sign-form .input-default:hover {
+  border: 2px solid rgba(154, 154, 154, 0.52);
+}
+
+.sign-form .input-default:focus {
+  border: 2px solid rgba(46, 136, 228, 0.52);
+}
+
 .sign-form-password {
-  width: 226px;
-  height: 39px;
+  box-sizing: border-box;
+  width: 244px;
+  height: 46px;
   margin-top: 20px;
   margin-left: 20px;
   padding-top: 5px;
@@ -515,26 +557,24 @@ a {
 
 /* Общие стили для кнопок */
 
-.button:hover {
-  -webkit-box-shadow: 0 2px 2px #ac1000;
-          box-shadow: 0 2px 2px #ac1000;
-  background-color: rgba(255, 255, 255, 0.2);
-  background-color: #ffffff;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
-  background-image: -webkit-linear-gradient(bottom, #e74a35 0%, #f26843 100%);
-  background-image: -o-linear-gradient(bottom, #e74a35 0%, #f26843 100%);
-  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+.button:hover,
+.slide-button:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
+  background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: -o-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  -webkit-box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+          box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 
-.button:active {
-  -webkit-box-shadow: inset 0 2px 2px #942718;
-          box-shadow: inset 0 2px 2px #942718;
-  background-color: rgba(0, 0, 0, 0.07);
-  background-color: #ffffff;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f26843), to(#e74a35));
-  background-image: -webkit-linear-gradient(bottom, #f26843 0%, #e74a35 100%);
-  background-image: -o-linear-gradient(bottom, #f26843 0%, #e74a35 100%);
-  background-image: linear-gradient(to top, #f26843 0%, #e74a35 100%);
+.button:active,
+.slide-button:active {
+  background: -webkit-gradient(linear, left top, left bottom, from(#d84732), to(#e1613e));
+  background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: -o-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  -webkit-box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+          box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
 
 .sign-in-button {
@@ -892,24 +932,6 @@ a {
   cursor: pointer;
 }
 
-.slide-button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
-  background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background: -o-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
-  -webkit-box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
-          box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
-}
-
-.slide-button:active {
-  background: -webkit-gradient(linear, left top, left bottom, from(#d84732), to(#e1613e));
-  background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
-  background: -o-linear-gradient(top, #d84732 0%, #e1613e 100%);
-  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
-  -webkit-box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
-          box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
-}
-
 #product-1:checked ~ .site-wrapper {
   background-color: #849d8f;
   background-image: url("../img/icecream_1_and_2.png");
@@ -1066,28 +1088,6 @@ a {
 .banner-item:first-child .banner-button {
   padding-right: 7px;
   padding-left: 7px;
-}
-
-.banner-button:hover {
-  -webkit-box-shadow: 0 1px 2px #ac1000;
-          box-shadow: 0 1px 2px #ac1000;
-  background-color: rgba(255, 255, 255, 0.2);
-  background-color: #ffffff;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#e74a35), to(#f26843));
-  background-image: -webkit-linear-gradient(bottom, #e74a35 0%, #f26843 100%);
-  background-image: -o-linear-gradient(bottom, #e74a35 0%, #f26843 100%);
-  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
-}
-
-.banner-button:active {
-  -webkit-box-shadow: inset 0 2px 2px #942718;
-          box-shadow: inset 0 2px 2px #942718;
-  background-color: rgba(0, 0, 0, 0.07);
-  background-color: #ffffff;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f26843), to(#e74a35));
-  background-image: -webkit-linear-gradient(bottom, #f26843 0%, #e74a35 100%);
-  background-image: -o-linear-gradient(bottom, #f26843 0%, #e74a35 100%);
-  background-image: linear-gradient(to top, #f26843 0%, #e74a35 100%);
 }
 
 /* Раздел хитов */
@@ -1900,7 +1900,7 @@ a {
 }
 
 .checkbox-container .checkbox-mark:after {
-  left: 7px;
+  left: 4px;
   top: -2px;
 
   width: 6px;
